// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probando el componente <CarouselModal/> Deberia mostrar <CarouselModal/> correctamente 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        class="react-responsive-modal-root"
        data-testid="root"
      >
        <div
          aria-hidden="true"
          class="react-responsive-modal-overlay"
          data-testid="overlay"
          style="animation: react-responsive-modal-overlay-in 300ms;"
        />
        <div
          class="react-responsive-modal-container react-responsive-modal-containerCenter"
          data-testid="modal-container"
        >
          <div
            aria-modal="true"
            class="react-responsive-modal-modal"
            data-testid="modal"
            role="dialog"
            style="animation: react-responsive-modal-modal-in 300ms;"
            tabindex="-1"
          >
            <div>
              <div
                class="closeButton"
              >
                X
              </div>
              <div
                class="carousel-root"
                tabindex="0"
              >
                <div
                  class="carousel carousel-slider"
                  style="width: 100%;"
                >
                  <button
                    aria-label="previous slide / item"
                    class="control-arrow control-prev"
                    type="button"
                  />
                  <div
                    class="slider-wrapper axis-horizontal"
                  >
                    <ul
                      class="slider animated"
                      style="transform: translate3d(-100%,0,0); transition-duration: 350ms;"
                    >
                      <li
                        class="slide"
                      >
                        <div>
                          <img
                            alt="img-alojamiento-4"
                            src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                          />
                        </div>
                      </li>
                      <li
                        class="slide selected previous"
                      >
                        <div>
                          <img
                            alt="img-alojamiento-0"
                            src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                          />
                        </div>
                      </li>
                      <li
                        class="slide"
                      >
                        <div>
                          <img
                            alt="img-alojamiento-1"
                            src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                          />
                        </div>
                      </li>
                      <li
                        class="slide"
                      >
                        <div>
                          <img
                            alt="img-alojamiento-2"
                            src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                          />
                        </div>
                      </li>
                      <li
                        class="slide"
                      >
                        <div>
                          <img
                            alt="img-alojamiento-3"
                            src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                          />
                        </div>
                      </li>
                      <li
                        class="slide"
                      >
                        <div>
                          <img
                            alt="img-alojamiento-4"
                            src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                          />
                        </div>
                      </li>
                      <li
                        class="slide selected previous"
                      >
                        <div>
                          <img
                            alt="img-alojamiento-0"
                            src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                          />
                        </div>
                      </li>
                    </ul>
                  </div>
                  <button
                    aria-label="next slide / item"
                    class="control-arrow control-next"
                    type="button"
                  />
                  <p
                    class="carousel-status"
                  >
                    1/5
                  </p>
                </div>
                <div
                  class="carousel"
                >
                  <div
                    class="thumbs-wrapper axis-vertical"
                  >
                    <button
                      aria-label="previous slide / item"
                      class="control-arrow control-prev control-disabled"
                      type="button"
                    />
                    <ul
                      class="thumbs animated"
                      style="transform: translate3d(0,0,0); transition-duration: 350ms;"
                    >
                      <li
                        aria-label="slide item 1"
                        class="thumb selected"
                        role="button"
                        style="width: 150px;"
                        tabindex="0"
                      >
                        <img
                          alt="img-alojamiento-0"
                          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                        />
                      </li>
                      <li
                        aria-label="slide item 2"
                        class="thumb"
                        role="button"
                        style="width: 150px;"
                        tabindex="0"
                      >
                        <img
                          alt="img-alojamiento-1"
                          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                        />
                      </li>
                      <li
                        aria-label="slide item 3"
                        class="thumb"
                        role="button"
                        style="width: 150px;"
                        tabindex="0"
                      >
                        <img
                          alt="img-alojamiento-2"
                          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                        />
                      </li>
                      <li
                        aria-label="slide item 4"
                        class="thumb"
                        role="button"
                        style="width: 150px;"
                        tabindex="0"
                      >
                        <img
                          alt="img-alojamiento-3"
                          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                        />
                      </li>
                      <li
                        aria-label="slide item 5"
                        class="thumb"
                        role="button"
                        style="width: 150px;"
                        tabindex="0"
                      >
                        <img
                          alt="img-alojamiento-4"
                          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                        />
                      </li>
                    </ul>
                    <button
                      aria-label="next slide / item"
                      class="control-arrow control-next"
                      type="button"
                    />
                  </div>
                </div>
              </div>
            </div>
            <button
              class="react-responsive-modal-closeButton"
              data-testid="close-button"
            >
              <svg
                data-testid="close-icon"
                height="28"
                viewBox="0 0 36 36"
                width="28"
              >
                <path
                  d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  }
>
  <div
    className="react-responsive-modal-root"
    data-testid="root"
  >
    <div
      aria-hidden={true}
      className="react-responsive-modal-overlay"
      data-testid="overlay"
      style={
        Object {
          "animation": "react-responsive-modal-overlay-in 300ms",
        }
      }
    />
    <div
      className="react-responsive-modal-container react-responsive-modal-containerCenter"
      data-testid="modal-container"
      onClick={[Function]}
    >
      <div
        aria-modal="true"
        className="react-responsive-modal-modal"
        data-testid="modal"
        onAnimationEnd={[Function]}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="dialog"
        style={
          Object {
            "animation": "react-responsive-modal-modal-in 300ms",
          }
        }
        tabIndex={-1}
      >
        <div>
          <div
            className="closeButton"
            onClick={[Function]}
          >
            X
          </div>
          <div
            className="carousel-root"
            tabIndex={0}
          >
            <div
              className="carousel carousel-slider"
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <button
                aria-label="previous slide / item"
                className="control-arrow control-prev"
                onClick={[Function]}
                type="button"
              />
              <div
                className="slider-wrapper axis-horizontal"
                style={Object {}}
              >
                <ul
                  className="slider animated"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "MozTransitionDuration": "350ms",
                      "OTransform": "translate3d(-100%,0,0)",
                      "OTransitionDuration": "350ms",
                      "WebkitTransform": "translate3d(-100%,0,0)",
                      "WebkitTransitionDuration": "350ms",
                      "msTransform": "translate3d(-100%,0,0)",
                      "msTransitionDuration": "350ms",
                      "transform": "translate3d(-100%,0,0)",
                      "transitionDuration": "350ms",
                    }
                  }
                >
                  <li
                    className="slide"
                    key="itemKey4clone/.$image-4"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <div
                      key="image-4"
                    >
                      <img
                        alt="img-alojamiento-4"
                        src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                      />
                    </div>
                  </li>
                  <li
                    className="slide selected previous"
                    key="itemKey0/.$image-0"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <div
                      key="image-0"
                    >
                      <img
                        alt="img-alojamiento-0"
                        src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                      />
                    </div>
                  </li>
                  <li
                    className="slide"
                    key="itemKey1/.$image-1"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <div
                      key="image-1"
                    >
                      <img
                        alt="img-alojamiento-1"
                        src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                      />
                    </div>
                  </li>
                  <li
                    className="slide"
                    key="itemKey2/.$image-2"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <div
                      key="image-2"
                    >
                      <img
                        alt="img-alojamiento-2"
                        src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                      />
                    </div>
                  </li>
                  <li
                    className="slide"
                    key="itemKey3/.$image-3"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <div
                      key="image-3"
                    >
                      <img
                        alt="img-alojamiento-3"
                        src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                      />
                    </div>
                  </li>
                  <li
                    className="slide"
                    key="itemKey4/.$image-4"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <div
                      key="image-4"
                    >
                      <img
                        alt="img-alojamiento-4"
                        src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                      />
                    </div>
                  </li>
                  <li
                    className="slide selected previous"
                    key="itemKey0clone/.$image-0"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <div
                      key="image-0"
                    >
                      <img
                        alt="img-alojamiento-0"
                        src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                      />
                    </div>
                  </li>
                </ul>
              </div>
              <button
                aria-label="next slide / item"
                className="control-arrow control-next"
                onClick={[Function]}
                type="button"
              />
              <p
                className="carousel-status"
              >
                1/5
              </p>
            </div>
            <div
              className="carousel"
            >
              <div
                className="thumbs-wrapper axis-vertical"
              >
                <button
                  aria-label="previous slide / item"
                  className="control-arrow control-prev control-disabled"
                  onClick={[Function]}
                  type="button"
                />
                <ul
                  className="thumbs animated"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "MozTransform": "translate3d(0,0,0)",
                      "MozTransitionDuration": "350ms",
                      "MsTransform": "translate3d(0,0,0)",
                      "MsTransitionDuration": "350ms",
                      "OTransform": "translate3d(0,0,0)",
                      "OTransitionDuration": "350ms",
                      "WebkitTransform": "translate3d(0,0,0)",
                      "WebkitTransitionDuration": "350ms",
                      "msTransform": "translate3d(0,0,0)",
                      "msTransitionDuration": "350ms",
                      "transform": "translate3d(0,0,0)",
                      "transitionDuration": "350ms",
                    }
                  }
                >
                  <li
                    aria-label="slide item 1"
                    className="thumb selected"
                    key="0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    style={
                      Object {
                        "width": 150,
                      }
                    }
                    tabIndex={0}
                  >
                    <img
                      alt="img-alojamiento-0"
                      key=".0/.$image-0"
                      src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                    />
                  </li>
                  <li
                    aria-label="slide item 2"
                    className="thumb"
                    key="1"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    style={
                      Object {
                        "width": 150,
                      }
                    }
                    tabIndex={0}
                  >
                    <img
                      alt="img-alojamiento-1"
                      key=".0/.$image-1"
                      src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                    />
                  </li>
                  <li
                    aria-label="slide item 3"
                    className="thumb"
                    key="2"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    style={
                      Object {
                        "width": 150,
                      }
                    }
                    tabIndex={0}
                  >
                    <img
                      alt="img-alojamiento-2"
                      key=".0/.$image-2"
                      src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                    />
                  </li>
                  <li
                    aria-label="slide item 4"
                    className="thumb"
                    key="3"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    style={
                      Object {
                        "width": 150,
                      }
                    }
                    tabIndex={0}
                  >
                    <img
                      alt="img-alojamiento-3"
                      key=".0/.$image-3"
                      src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                    />
                  </li>
                  <li
                    aria-label="slide item 5"
                    className="thumb"
                    key="4"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    style={
                      Object {
                        "width": 150,
                      }
                    }
                    tabIndex={0}
                  >
                    <img
                      alt="img-alojamiento-4"
                      key=".0/.$image-4"
                      src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
                    />
                  </li>
                </ul>
                <button
                  aria-label="next slide / item"
                  className="control-arrow control-next"
                  onClick={[Function]}
                  type="button"
                />
              </div>
            </div>
          </div>
        </div>
        <button
          className="react-responsive-modal-closeButton"
          data-testid="close-button"
          onClick={[Function]}
        >
          <svg
            data-testid="close-icon"
            height={28}
            viewBox="0 0 36 36"
            width={28}
          >
            <path
              d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</Portal>
`;

exports[`Probando el componente <DescriptionBar/> Deberia mostrar <DescriptionBar/> correctamente 1`] = `
<div
  className="descripcionBar delimiter"
>
  <div
    className="descripcionBarChild delimiterChild"
  >
    <h2>
      Alójate en el corazón de 
      ciudad
    </h2>
    <p>
      descripcion hotel
    </p>
  </div>
</div>
`;

exports[`Probando el componente <FeaturesBar/> Deberia mostrar <FeaturesBar/> correctamente 1`] = `
<div
  className="featuresBar delimiter"
>
  <div
    className="featuresBarChild delimiterChild"
  >
    <h2>
      ¿Qué ofrece este lugar?
    </h2>
    <div
      className="icons"
    >
      <div
        className="featureBox"
        key="0"
      >
        <img
          alt="wifi"
          src="wifi.svg"
        />
        <p
          className="featureTitle"
        >
          wifi
        </p>
      </div>
      <div
        className="featureBox"
        key="1"
      >
        <img
          alt="pool"
          src="pool.svg"
        />
        <p
          className="featureTitle"
        >
          pool
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <ImageBar/> Deberia mostrar <ImageBar/> correctamente 1`] = `
<div
  className="imageBar delimiter"
>
  <div
    className="imageBarChild delimiterChild"
  >
    <div
      className="barraSup"
    >
      <img
        alt="iconSocial"
        className="iconImage"
        onClick={[Function]}
        src="iconSocial.svg"
      />
      <svg
        className="iconHeart"
        height="18"
        onClick={[Function]}
        viewBox="0 0 25 25"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="heartColor"
          d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
        />
      </svg>
    </div>
    <div
      className="barraInf"
    >
      <div
        className="barraIzq"
      >
        <img
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
      </div>
      <div
        className="barraDer"
      >
        <img
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <img
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <img
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <img
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <div
          className="verMas"
          onClick={[Function]}
        >
          Ver Más
        </div>
      </div>
      <div
        className="slider"
        onClick={[Function]}
      >
        <img
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <p>
          1/5
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <ImageBar/> Deberia mostrar <ImageBar/> correctamente con varias imagenes 1`] = `
<div
  className="imageBar delimiter"
>
  <div
    className="imageBarChild delimiterChild"
  >
    <div
      className="barraSup"
    >
      <img
        alt="iconSocial"
        className="iconImage"
        onClick={[Function]}
        src="iconSocial.svg"
      />
      <svg
        className="iconHeart"
        height="18"
        onClick={[Function]}
        viewBox="0 0 25 25"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          className="heartColor"
          d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
        />
      </svg>
    </div>
    <div
      className="barraInf"
    >
      <div
        className="barraIzq"
      >
        <img
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
      </div>
      <div
        className="barraDer"
      >
        <img
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <img
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <img
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <img
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <div
          className="verMas"
          onClick={[Function]}
        >
          Ver Más
        </div>
      </div>
      <div
        className="slider"
        onClick={[Function]}
      >
        <img
          src="https://media.istockphoto.com/photos/downtown-cleveland-hotel-entrance-and-waiting-taxi-cab-picture-id472899538?s=612x612"
        />
        <p>
          2/5
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <InfoBar/> Deberia mostrar <InfoBar/> correctamente 1`] = `
<div
  className="infoBar delimiter"
>
  <div
    className="infoBarChild delimiterChild"
  >
    <h2>
      ¿Qué tenés que saber?
    </h2>
    <div
      className="info"
    >
      <div>
        <h3>
          Normas de la casa
        </h3>
        <p
          key="0"
        >
          normas1
        </p>
        <p
          key="1"
        >
          normas2
        </p>
        <p
          key="2"
        >
          normas3
        </p>
      </div>
      <div>
        <h3>
          Salud y Seguridad
        </h3>
        <p
          key="0"
        >
          salud1
        </p>
        <p
          key="1"
        >
          salud2
        </p>
        <p
          key="2"
        >
          salud3
        </p>
      </div>
      <div>
        <h3>
          Política de Cancelación
        </h3>
        <p
          key="0"
        >
          politicas1
        </p>
        <p
          key="1"
        >
          politicas2
        </p>
        <p
          key="2"
        >
          politicas3
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <Map/> Deberia mostrar <Map> correctamente 1`] = `
<LoadScript
  googleMapsApiKey="AIzaSyDoTLld8oN8wZm0avj07nwEv0FXqdfiaOE"
  id="script-loader"
  loadingElement={
    <p>
      Cargando
    </p>
  }
  version="weekly"
>
  <GoogleMap
    center={
      Object {
        "lat": undefined,
        "lng": undefined,
      }
    }
    mapContainerStyle={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
    onClick={[Function]}
  >
    <Marker
      onClick={[Function]}
      position={
        Object {
          "lat": undefined,
          "lng": undefined,
        }
      }
    />
  </GoogleMap>
</LoadScript>
`;

exports[`Probando el componente <MapBar/> Deberia mostrar <MapBar> correctamente 1`] = `
<div
  className="mapBar delimiter"
>
  <div
    className="mapBarChild delimiterChild"
  >
    <h2>
      ¿Dónde vas a estar?
    </h2>
    <p>
      ciudad , pais
    </p>
    <div
      className="map"
    >
      <Memo(Map)
        latitude={4.111784}
        longitude={-73.6396047}
        zoom={15}
      />
    </div>
  </div>
</div>
`;

exports[`Probando el componente <QualificationBar/> Deberia mostrar <QualificationBar/> correctamente 1`] = `
<div
  className="qualificationBar delimiter"
>
  <div
    className="qualificationBarChild delimiterChild"
  >
    <h2>
      Califica este alojamiento: 
    </h2>
    <div
      className="starsMap"
    >
      <div
        className="starBox"
        key="0"
        onClick={null}
      >
        <svg
          fill="none"
          index={0}
          key="0"
          viewBox="0 0 15 17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="star"
            d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
          />
        </svg>
      </div>
      <div
        className="starBox"
        key="1"
        onClick={null}
      >
        <svg
          fill="none"
          index={1}
          key="1"
          viewBox="0 0 15 17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="star"
            d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
          />
        </svg>
      </div>
      <div
        className="starBox"
        key="2"
        onClick={null}
      >
        <svg
          fill="none"
          index={2}
          key="2"
          viewBox="0 0 15 17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="star"
            d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
          />
        </svg>
      </div>
      <div
        className="starBox"
        key="3"
        onClick={null}
      >
        <svg
          fill="none"
          index={3}
          key="3"
          viewBox="0 0 15 17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="star"
            d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
          />
        </svg>
      </div>
      <div
        className="starBox"
        key="4"
        onClick={null}
      >
        <svg
          fill="none"
          index={4}
          key="4"
          viewBox="0 0 15 17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            className="star"
            d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
          />
        </svg>
      </div>
    </div>
    <div
      className="qualificationButtons"
    >
      <button
        className="qualificationReset"
        onClick={[Function]}
      >
         Resetear 
      </button>
      <button
        className="qualificationSubmit"
        onClick={[Function]}
      >
         Enviar     
      </button>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <ScoreBar/> Deberia mostrar <ScoreBar/> correctamente con calificacion de 1.1 1`] = `
<div
  className="scoreBar delimiter"
>
  <div
    className="scoreBarChild delimiterChild"
  >
    <div
      className="barraIzq"
    >
      <p>
         
        <img
          alt="iconLocation"
          className="iconLocation"
          src="iconLocation.svg"
        />
          
         ciudad, pais
      </p>
      <p
        className="scoreBarReference"
      >
        referencia
      </p>
    </div>
    <div
      className="barraDer"
    >
      <div
        className="calificacionLetra"
      >
        <p>
          Malo
        </p>
        <div
          className="calificacionEstrellas"
        >
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
        </div>
      </div>
      <p
        className="calificacionEntero"
      >
        1
      </p>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <ScoreBar/> Deberia mostrar <ScoreBar/> correctamente con calificacion de 3.1 1`] = `
<div
  className="scoreBar delimiter"
>
  <div
    className="scoreBarChild delimiterChild"
  >
    <div
      className="barraIzq"
    >
      <p>
         
        <img
          alt="iconLocation"
          className="iconLocation"
          src="iconLocation.svg"
        />
          
         ciudad, pais
      </p>
      <p
        className="scoreBarReference"
      >
        referencia
      </p>
    </div>
    <div
      className="barraDer"
    >
      <div
        className="calificacionLetra"
      >
        <p>
          Regular
        </p>
        <div
          className="calificacionEstrellas"
        >
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
        </div>
      </div>
      <p
        className="calificacionEntero"
      >
        3
      </p>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <ScoreBar/> Deberia mostrar <ScoreBar/> correctamente con calificacion de 5.1 1`] = `
<div
  className="scoreBar delimiter"
>
  <div
    className="scoreBarChild delimiterChild"
  >
    <div
      className="barraIzq"
    >
      <p>
         
        <img
          alt="iconLocation"
          className="iconLocation"
          src="iconLocation.svg"
        />
          
         ciudad, pais
      </p>
      <p
        className="scoreBarReference"
      >
        referencia
      </p>
    </div>
    <div
      className="barraDer"
    >
      <div
        className="calificacionLetra"
      >
        <p>
          Bueno
        </p>
        <div
          className="calificacionEstrellas"
        >
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
        </div>
      </div>
      <p
        className="calificacionEntero"
      >
        5
      </p>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <ScoreBar/> Deberia mostrar <ScoreBar/> correctamente con calificacion de 6.1 1`] = `
<div
  className="scoreBar delimiter"
>
  <div
    className="scoreBarChild delimiterChild"
  >
    <div
      className="barraIzq"
    >
      <p>
         
        <img
          alt="iconLocation"
          className="iconLocation"
          src="iconLocation.svg"
        />
          
         ciudad, pais
      </p>
      <p
        className="scoreBarReference"
      >
        referencia
      </p>
    </div>
    <div
      className="barraDer"
    >
      <div
        className="calificacionLetra"
      >
        <p>
          Muy Bueno
        </p>
        <div
          className="calificacionEstrellas"
        >
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
        </div>
      </div>
      <p
        className="calificacionEntero"
      >
        6
      </p>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <ScoreBar/> Deberia mostrar <ScoreBar/> correctamente con calificacion de 9.1 1`] = `
<div
  className="scoreBar delimiter"
>
  <div
    className="scoreBarChild delimiterChild"
  >
    <div
      className="barraIzq"
    >
      <p>
         
        <img
          alt="iconLocation"
          className="iconLocation"
          src="iconLocation.svg"
        />
          
         ciudad, pais
      </p>
      <p
        className="scoreBarReference"
      >
        referencia
      </p>
    </div>
    <div
      className="barraDer"
    >
      <div
        className="calificacionLetra"
      >
        <p>
          Excelente
        </p>
        <div
          className="calificacionEstrellas"
        >
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
          <svg
            fill="none"
            height="13"
            viewBox="0 0 15 13"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.27778 0L8.91174 4.83688H14.1994L9.92159 7.82624L11.5555 12.6631L7.27778 9.67376L3.00001 12.6631L4.63397 7.82624L0.3562 4.83688H5.64382L7.27778 0Z"
              fill="#1DBEB4"
            />
          </svg>
        </div>
      </div>
      <p
        className="calificacionEntero"
      >
        9
      </p>
    </div>
  </div>
</div>
`;

exports[`Probando el componente <Titlebar/> Deberia mostrar <TitleBar/> correctamente 1`] = `
<div
  className="titleBar delimiter"
>
  <div
    className="titleBarChild delimiterChild"
  >
    <div>
      <p>
        <Component />
      </p>
      <h2>
        nombreHotel
      </h2>
    </div>
    <div>
      <img
        alt="IconLocation"
        className="iconLocation"
        src="iconBack.svg"
      />
    </div>
  </div>
</div>
`;
